# soap-service

./: .env.example  .gitignore  Cargo.toml
src/: main.rs
src/domain/: order.rs
src/infraestructure/: mod.rs
src/infraestructure/http/: handlers.rs  marshal.rs  mod.rs  structs.rs
src/infraestructure/queue/: mod.rs
src/infraestructure/soap/: request.rs
